--- a/server/package.json
+++ b/server/package.json
@@ -25,8 +25,10 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "mqtt": "^5.11.0",
     "nodemon": "^3.1.9",
     "pg": "^8.14.1",
+    "socket.io": "^4.8.1",
     "winston": "^3.17.0",
     "zod": "^3.24.3"
   },
