--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "@types/express-session": "^1.18.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.7",
@@ -23,12 +24,13 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mqtt": "^5.11.0",
-    "nodemon": "^3.1.9",
     "pg": "^8.14.1",
     "socket.io": "^4.8.1",
+    "spotify-web-api-node": "^5.0.2",
     "winston": "^3.17.0",
     "zod": "^3.24.3"
   },
@@ -40,7 +42,9 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.14.1",
     "@types/pg": "^8.11.13",
-    "drizzle-kit": "^0.31.0",
+    "@types/spotify-web-api-node": "^5.0.11",
+    "drizzle-kit": "^0.18.1",
+    "nodemon": "^3.1.10",
     "prisma": "^6.6.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
