--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -41,6 +41,5 @@ jobs:
         run: |
           ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             cd ${{ secrets.EC2_PATH }}
-            pm2 restart all || pm2 start server.js --name my-server
-
+            /home/ubuntu/.nvm/versions/node/v23.11.0/bin/pm2 restart all || /home/ubuntu/.nvm/versions/node/v23.11.0/bin/pm2 start dist/server.js --name my-server
           EOF
