--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -39,7 +39,13 @@ jobs:
 
       - name: Restart server on EC2
         run: |
-          ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-            cd ${{ secrets.EC2_PATH }}
-            /home/ubuntu/.nvm/versions/node/v23.11.0/bin/pm2 restart all || /home/ubuntu/.nvm/versions/node/v23.11.0/bin/pm2 start dist/server.js --name my-server
-          EOF
+         ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+           export NVM_DIR="$HOME/.nvm"
+           [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+
+           nvm use 24.0.1
+
+           cd ${{ secrets.EC2_PATH }}
+           pm2 restart all || pm2 start dist/server.js --name my-server
+         EOF
+
