--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: 24.0.1
+        node: [24.0.1]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
