--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -20,16 +20,20 @@ jobs:
         node-version: ['24.x']  
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
-        with: node-version:${{ matrix.node }}
+        node-version: ${{ matrix.node-version }} 
+
       - name: Cache npm
         uses: actions/cache@v3
         with:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('server/**/package-lock.json') }}
+
       - run: npm ci
       - run: npm test
       - run: npm run build
+      
       - uses: actions/upload-artifact@v4
         with:
           name: server-dist
