--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -5,8 +5,8 @@ on:
   push:
     branches: [main]
     paths:
-      - 'server/**'       # trigger only when server code changes
-      - '.github/**'       # or when workflow itself changes
+      - 'server/**'
+      - '.github/**'
 
 defaults:
   run:
@@ -17,39 +17,46 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: ['24.x']  
+        node-version: ['24.x']
+
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
 
-
       - name: Cache npm
         uses: actions/cache@v4
-
         with:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('server/**/package-lock.json') }}
 
-      - run: npm ci
-      - run: npm run build
+      - name: Install deps
+        run: npm ci
 
-      - uses: actions/upload-artifact@v4
+      - name: Build
+        run: npm run build
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
         with:
           name: server-dist
-          path: dist/
+          path: server/dist/  # ensure path is relative to repo root :contentReference[oaicite:1]{index=1}
 
   deploy:
     needs: build
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/download-artifact@v4
+      - name: Download artifact
+        uses: actions/download-artifact@v4
         with:
           name: server-dist
-          path: server/dist
+          path: server/dist  # same root-relative path :contentReference[oaicite:2]{index=2}
+
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v1.0.0
         with:
