--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -8,74 +8,45 @@ on:
       - 'server/**'
       - '.github/**'
 
-defaults:
-  run:
-    working-directory: server
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: ['24.x']
-
     steps:
       - uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '24.x'
+          cache: 'npm'
 
-      - name: Cache npm
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('server/**/package-lock.json') }}
-
-      - name: Install deps
+      - name: Install dependencies
         run: npm ci
+        working-directory: ./server
 
-      - name: Build
+      - name: Build TypeScript
         run: npm run build
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: server-dist
-          path: server/dist/    # must reference repo root :contentReference[oaicite:1]{index=1}
-
-  deploy:
-    needs: build
-    if: github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: server-dist
-          path: server/dist     # same root-relative path :contentReference[oaicite:2]{index=2}
+        working-directory: ./server
 
       - name: Deploy to EC2
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          sername: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          source: "server/dist/*"
+          target: "/home/ubuntu/Desk-Sarthi/server"
+
+      - name: Cleanup, install, and restart server on EC2
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            export NVM_DIR="$HOME/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+            find /home/ubuntu/Desk-Sarthi/server -mindepth 1 ! -name 'node_modules' ! -name 'app.log' ! -name '.env' -exec rm -rf {} +
+            cd /home/ubuntu/Desk-Sarthi/server
+            npm install --production
+            pm2 restart all
 
-            cd ${{ secrets.EC2_PATH }}
-
-            # Confirm correct files
-            ls package.json ecosystem.config.js
-
-            # Replace dist only
-            rm -rf dist && mkdir dist
-            rsync -avz --delete dist/ ./dist/
-
-            npm install --omit=dev
-            pm2 reload ecosystem.config.js || pm2 start ecosystem.config.js
-            pm2 save
