--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -5,9 +5,8 @@ on:
   push:
     branches: [main]
     paths:
-      - 'server/**'
-      - '.github/**'
-
+      - "server/**"
+      - ".github/**"
 
 jobs:
   build-and-deploy:
@@ -18,9 +17,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '24.x'
-          cache: 'npm'
-          cache-dependency-path: server/package-lock.json  # <-- specify path here
+          node-version: "24.x"
+          cache: "npm"
+          cache-dependency-path: server/package-lock.json # <-- specify path here
 
       - name: Install dependencies
         run: npm ci
@@ -36,18 +35,17 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "server/dist/*"
-          target: "/home/ubuntu/Desk-Sarthi/server"
+          source: "server/"
+          target: "/home/ubuntu/Desk-Sarthi/"
+          rm: true
 
-      - name: Cleanup, install, and restart server on EC2
+      - name: Install dependencies and restart server on EC2
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            find /home/ubuntu/Desk-Sarthi/server -mindepth 1 ! -name 'node_modules' ! -name 'app.log' ! -name '.env' -exec rm -rf {} +
             cd /home/ubuntu/Desk-Sarthi/server
             npm install --production
             pm2 restart all
-
