--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -30,15 +30,14 @@ jobs:
         working-directory: ./server
 
       - name: Deploy to EC2
-        uses: appleboy/scp-action@v0.1.7
+        uses: burnett01/rsync-deployments@6.0.0
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          source: "server/"
-          target: "/home/ubuntu/Desk-Sarthi/"
-          rm: true
-          excludes: ".env"
+          switches: -avzr --delete --exclude='.env'
+          path: server/
+          remote_path: /home/ubuntu/Desk-Sarthi/
+          remote_host: ${{ secrets.EC2_HOST }}
+          remote_user: ${{ secrets.EC2_USER }}
+          remote_key: ${{ secrets.EC2_SSH_KEY }}
 
       - name: Install dependencies and restart server on EC2
         uses: appleboy/ssh-action@v1.0.0
