--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -30,14 +30,14 @@ jobs:
         working-directory: ./server
 
       - name: Deploy to EC2
-        uses: burnett01/rsync-deployments@6.0.0
+        uses: appleboy/scp-action@v0.1.7
         with:
-          switches: -avzr --delete --exclude='.env'
-          path: server/
-          remote_path: /home/ubuntu/Desk-Sarthi/
-          remote_host: ${{ secrets.EC2_HOST }}
-          remote_user: ${{ secrets.EC2_USER }}
-          remote_key: ${{ secrets.EC2_SSH_KEY }}
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          source: "server/"
+          target: "/home/ubuntu/Desk-Sarthi/"
+          rm: true
 
       - name: Install dependencies and restart server on EC2
         uses: appleboy/ssh-action@v1.0.0
@@ -46,6 +46,21 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
+            mkdir -p /home/ubuntu/Desk-Sarthi/server
             cd /home/ubuntu/Desk-Sarthi/server
+            # Create .env file with secrets
+            cat > .env << EOF
+            API_OPEN_WEATHER=${{ secrets.API_OPEN_WEATHER }}
+            SPOTIFY_CLIENT_ID=${{ secrets.SPOTIFY_CLIENT_ID }}
+            SPOTIFY_CLIENT_SECRET=${{ secrets.SPOTIFY_CLIENT_SECRET }}
+            SPOTIFY_REDIRECT_URI=${{ secrets.SPOTIFY_REDIRECT_URI }}
+            SESSION_SECRET=${{ secrets.SESSION_SECRET }}
+            DATABASE_URL=${{ secrets.DATABASE_URL }}
+            PORT=${{ secrets.PORT }}
+            HIVEMQ_HOST=${{ secrets.HIVEMQ_HOST }}
+            HIVEMQ_USERNAME=${{ secrets.HIVEMQ_USERNAME }}
+            HIVEMQ_PASSWORD=${{ secrets.HIVEMQ_PASSWORD }}
+            CLIENT_URL=${{ secrets.CLIENT_URL }}
+            EOF
             npm install --production
             pm2 restart all
